FINERACT-2824: migrate the loan application tests to Feign
LoanApplicationApprovalTest, LoanApplicationScheduleMonthlyTest,
LoanApplicationRejectionForLoanProductWithPeriodicAccrualAccountingTest and
LoanValidationIntegrationTest.

Applications use LoanRequestBuilders.legacyIndividualApplication, which
reproduces the defaults LoanApplicationTestBuilder.build() emitted without any
call site naming them: maxOutstandingLoanBalance, an empty collateral list, the
default strategy and the en_GB locale.

Error cases keep the status their response spec pinned and now also assert the
globalisation code rather than only reading it out of an error map:
approval above the demanded amount is 403, the multi-disburse sum check is 400.

Repayment schedule due dates are compared as LocalDate rather than the
[year, month, day] lists REST Assured produced.

@SuppressWarnings("rawtypes") is gone from LoanApplicationApprovalTest: the raw
HashMap tranche and collateral maps it covered are typed models now.